--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.0.1",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "dotenv": "^15.0.0",
+    "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.4",
     "save": "^2.4.0",
